Fix spacing and design, act three (header)

--- a/files/style.css
+++ b/files/style.css
@@ -5,7 +5,7 @@ body {
 
 #main {
     margin: 10px auto;
-    width: 100vw;
+    width: 95vw;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -15,13 +15,14 @@ body {
 header {
     background-color: #AAA;
     margin: 0 auto;
-    height: 300px;
+    width: 90vw;
     padding: 20px;
+    display: flex;
 }
 
 header img {
-    margin-left: 20px;
-    float: right;
+    width: 50%;
+    padding-right: 3%;
 }
 
 button:hover {
